--- a/008_modeling_result_sumstat.Rmd
+++ b/008_modeling_result_sumstat.Rmd
@@ -697,7 +697,7 @@ ggplot(filter(df, !Trait %in% essential_traits),
 
 ##### TAD and OAD only
 
-```{r simple_model_coef, fig.show='asis', fig.height=16, fig.width=10}
+```{r simple_model_coef_paper, fig.show='asis', fig.height=16, fig.width=10}
 # cOMBINE THE P VALUE OF interaction model with single trait model picture
 df_coef_glms_EBV <- mutate(df_coef_glms_EBV,
                            std_coef = Estimate*`Std..Error`)
@@ -739,10 +739,10 @@ test$sign_x[test$milk_type=="TAD"] <- ""
               position = position_dodge(.9), color = "red"
               , vjust = 1
               ) +
-    # labs(title = bv #ifelse(i==1, paste0(bv, " ", essential_traits[i]),
+    labs(# title = bv #ifelse(i==1, paste0(bv, " ", essential_traits[i]),
                         # essential_traits[i]),
-         # x = "", y = ""
-         # ) +
+         x = "Survival", y = "Standardised coefficient"
+         ) +
     facet_grid(Trait~., scales = "free_y") +
     # scale_fill_brewer(palette = "Set3") +
     scale_fill_manual(values =
